--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+joblib==1.5.1
+numpy==2.3.2
+pandas==2.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+scikit-learn==1.7.1
+scipy==1.16.1
+six==1.17.0
+threadpoolctl==3.6.0
+tzdata==2025.2
